--- a/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
+++ b/Lenguaje_de_marcas/mangak/styles/mangaMenu.css
@@ -1,14 +1,7 @@
 
-
-
-
-
-
-
-
-
-
-
+/* +--------------------+ */
+/* | ALL MANGA MENU CSS | */
+/* +--------------------+ */
 
 * {
     padding: 0;
@@ -18,12 +11,12 @@
     scroll-behavior: smooth;
     
 }
-a{
-    text-decoration: none;
-    color: white;
-}
+
+
 body{
-    background-image: url(https://www.teleadhesivo.com/es/img/fomb028-png/folder/products-detalle-png/fotomurales-textura-ladrillo-munich.png);
+    /* background-image: url(https://www.teleadhesivo.com/es/img/fomb028-png/folder/products-detalle-png/fotomurales-textura-ladrillo-munich.png); */
+    background-color: grey;
+    margin: 60px 0 0 0;
 }
 .neontext {
     color: rgb(255, 255, 255);
@@ -36,13 +29,14 @@ body{
     0 0 30px rgb(255, 0, 98);
 }
 
-/* body{
+body{
     background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(216,20,68,1) 100%);
-} */
+}
 header{
-    position: static;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
     top: 0;
-
 }
 
 header h3{
@@ -50,6 +44,11 @@ header h3{
     padding: 15px 20px 10px 20px;
     position: absolute;
     top: 0px;
+}
+
+header h3 a{
+    text-decoration: none;
+    color: white;
 }
 
 /**Navegación**/
@@ -67,17 +66,8 @@ header h3{
     width: 10%;
     margin: 15px 5px 5px 5px;
     padding: 5px;
-    /* background-color: white; */
     border-radius: 7px; 
 }
-    /* #mainNav ul li:hover {
-        display: inline-block;
-        width: 7%;
-        margin: 5px;
-        padding: 5px;
-        background-color: #ab3e59;
-        border-radius: 7px; 
-    } */
 
 #mainNav ul li a {
     font-weight: bold;
@@ -251,7 +241,7 @@ main{
 
 
 /* Section de portada */
-#portada{
+.portada{
     float: left;
     height: 600px;
     margin: 30px 5px 0 12%;
@@ -267,7 +257,7 @@ main{
     0 0 40px rgb(255, 0, 98);
 }
 
-#portada h2{
+.portada h2{
     color: white;
     position: relative;
     top: 30px;
@@ -279,12 +269,12 @@ main{
     border-bottom: 10px white double;
 }
 
-#portada img{
-    padding: 60px 0 0 25%;
+.portada img{
+    margin: 60px 0 0 25%;
 }
 
 /* Seccion de sinopsis */
-#sinopsis{
+.sinopsis{
     float: left;
     height: 300px;
     margin: 30px 5px 20px 60px;
@@ -299,7 +289,7 @@ main{
     0 0 25px rgb(255, 0, 98),
     0 0 40px rgb(255, 0, 98);
 }
-#sinopsis p{
+.sinopsis p{
     position: relative;
     color: white;
     font-size: 18px;
@@ -308,7 +298,7 @@ main{
 }
 
 /* Primera letra mas grande */
-#sinopsis p::first-letter{
+.sinopsis p::first-letter{
     font-size: 2em;
     font-weight: bold;
     line-height: .9em;
@@ -316,7 +306,7 @@ main{
     margin: .1em;
 }
 
-#sinopsis h2{
+.sinopsis h2{
     color: white;
     font-size: 30px;
     width: 80%;
@@ -327,7 +317,7 @@ main{
 
 
 /* Etiquetas */
-#etiquetas{
+.etiquetas{
     float: left;
     height: 250px;
     margin: 30px 5px 20px 60px;
@@ -342,7 +332,7 @@ main{
     0 0 25px rgb(255, 0, 98),
     0 0 40px rgb(255, 0, 98);
 }
-#etiquetas h2{
+.etiquetas h2{
     color: white;
     font-size: 30px;
     width: 80%;
@@ -352,7 +342,7 @@ main{
     border-bottom: 2px solid white;
 }
 /* Articulo etiquetas */
-#etiquetas a{
+.etiquetas a{
     float: left;
     font-size: 25px;
     color: white;
@@ -363,17 +353,17 @@ main{
     border-radius: 20PX;
 }
 
-#etiquetas a:hover{
+.etiquetas a:hover{
     background-color: rgb(75, 75, 75) ;
 }
-#etiquetas i{
+.etiquetas i{
     font-size: 18px;
 }
 
 
 
 /* seccion Capitulos */
-#capitulos{
+.capitulos{
     float: left;
     height: 1000px;
     margin: 30px 5px 100px 12%;
@@ -389,25 +379,28 @@ main{
     0 0 40px rgb(255, 0, 98);
 }
 
-#capitulos article{
+.capitulos article{
     width:90%;
     background-color: rgb(182, 182, 182);
-    margin: 20px 20px 20px 35px;
-    padding: 5px 0 5px 0;
+    margin: 30px 20px 30px 35px;
+    padding: 10px 0 10px 0;
     border-radius: 20px;
 }
 
-#capitulos article:hover{
+.capitulos article:hover{
     background-color: rgb(218, 218, 218);
 }
 
-#capitulos article a{
+.capitulos article a{
+    text-decoration: none;
     color: black;
     font-weight: 800;
     padding: 5px 85% 5px 20px;
 }
 
-#capitulos article div{
+
+
+.capitulos article div{
     width: 18px;
     height: 18px;
     border-radius: 30px;
@@ -416,24 +409,79 @@ main{
     float: right;
 }
 
-/* #capitulos article a:visited  {
+/* .capitulos article a:visited  {
     background-color: green;
 } */
 
 
+.userZone{
+    float: left;
+    height: 1000px;
+    margin: 30px 5px 100px 3%;
+    width: 20%;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
+    box-shadow:
+    0 0 2px rgb(255, 255, 255),
+    0 0 10px rgb(255, 255, 255),
+    0 0 15px rgb(255, 0, 98),
+    0 0 12px rgb(255, 0, 98),
+    0 0 25px rgb(255, 0, 98),
+    0 0 40px rgb(255, 0, 98);
+
+}
+
+.userZone div{
+    margin: 20px 10px 10px 20px;
+    float: left;
+    width: 150px;
+}
+.userZone div i{
+    float: left;
+}
+.userZone div p{
+    color: white;
+    margin: 8px 0 0 0;
+    font-weight: 900;
+}
+
+.leido{
+    color: greenyellow;
+}
+
+.pendiente{
+    color: orange;
+}
+
+.siguiendo{
+    color: cyan;
+}
+
+.favorito{
+    color: hotpink;
+}
+
+.loTengo{
+    color: magenta;
+}
+
+.abandonado{
+    color: red;
+}
 
 
+.userSocial{
+    margin: 50px 0 0 0;
+}
 
-
-
-
-
-
-
-
-
-
-
+.userSocial h2{
+    width: 80%;
+    color:  white;
+    text-align: center;
+    padding: 0 0 10px 0;
+    margin: 0 0 10px 10%;
+    border-bottom: 10px white solid ;
+}
 
 
 
